--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,8 @@ numpy==1.26.4
 langchain-community==0.3.7
 chromadb==0.5.11
 squlite==3.41.2
+pypdf
+unstructured
+python-dotenv
 tiktoken
 pysqlite3-binary
