--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,11 @@ openai==0.28.0
 langchain==0.3.7
 pandas==2.2.2
 numpy==1.26.4
+langchain-community==0.3.7
+tiktoken 
+chromadb 
+langchain-community 
+langchain-openai 
+gradio 
+unstructured
+pysqlite3-binary
